Fix dark mode

--- a/static/sass/garth-dark.scss
+++ b/static/sass/garth-dark.scss
@@ -9,3 +9,7 @@
   "flex",
   "theme"
 ;
+
+.typeset p a, .typeset li a {
+  background-image:none;
+}
